// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeNegative fails when given negative number 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeNegative()</intensity>

Expected value to not be a negative number received:
  <red>-1</color>"
`;

exports[`.toBeNegative fails when given Infinity 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeNegative()</intensity>

Expected value to be a negative number received:
  <red>Infinity</color>"
`;

exports[`.toBeNegative fails when given positive number 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeNegative()</intensity>

Expected value to be a negative number received:
  <red>1</color>"
`;
